Add templates and routes for main pages.

--- a/main/templates/main/nav.html
+++ b/main/templates/main/nav.html
@@ -1,15 +1,15 @@
 <nav>
 	<ul>
-		<li><a href="">
+		<li><a href="{% url 'home' %}">
 			Home
 		</a></li>
-		<li><a href="">
+		<li><a href="{% url 'resume' %}">
 			Resume
 		</a></li>
-		<li><a href="">
+		<li><a href="{% url 'projects' %}">
 			Projects
 		</a></li>
-		<li><a href="">
+		<li><a href="{% url 'contact' %}">
 			Contact
 		</a></li>
 	</ul>
