--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,6 +1,6 @@
 {% extends "./master.html" %}
 
-{% block title %}Chris Knoll{% endblock %}
+{% block title %}Chris Knoll - Home{% endblock %}
 
 {% block body %}
 <div id="main-intro">
@@ -12,7 +12,7 @@
 
 <p>I’ve always been fascinated with computers. But it wasn’t until my mother started calling me every other day for help with her computer that I decided to steer away from a hardware and help-desk route to become a software developer.</p>
 
-<p>I was also frustrated that I couldn’t make software solve the problems that needed to be solved in my previous jobs. I knew that I could create something better - so I started learning to write software instead of merely using it. And yes, I still help fix my mom’s computer when she calls (I’m not a horrible person).</p>
+<p>I was also frustrated that I couldn’t make software solve the problems that needed to be solved in my previous jobs. I knew that I could create something better - so I started learning to write software instead of merely using it. And yes, I still help fix my mom’s computer when she calls.</p>
 
 <h2>Education</h2>
 <p>I earned my BASc in Software Development from Green River, graduating Summa Cum Laude with a 4.0 GPA. I was nominated for the President’s Award and won the Technology Award, an award given to the top student across eight different departments. The strengths that made me successful as a student also make me a great software engineer: strong logic and math, a knack for debugging, being extremely detail-oriented, following specifications before going above and beyond, and the ability to adapt and be agile.</p>
