Add icons and links to github and linkedin.

--- a/main/templates/main/master.html
+++ b/main/templates/main/master.html
@@ -4,6 +4,7 @@
 <html>
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Abel|Fugaz+One|Lobster|Open+Sans" rel="stylesheet">
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="{% static 'main/style.css' %}" />
 		<title>
 			{% block title %}{% endblock %}
@@ -29,6 +30,7 @@
 				background-color: #0e1a40;
 				display: flex;
 				font-family: Abel;
+				font-size: 1.2em;
 				justify-content: space-around;
 				list-style-type: none;
 				margin: 0;
