--- a/main/templates/main/nav.html
+++ b/main/templates/main/nav.html
@@ -1,16 +1,28 @@
 <nav>
 	<ul>
 		<li><a href="{% url 'home' %}">
+			<i class="fa fa-home" aria-hidden="true"></i>
 			Home
 		</a></li>
 		<li><a href="{% url 'resume' %}">
+			<i class="fa fa-file-text" aria-hidden="true"></i>
 			Resume
 		</a></li>
 		<li><a href="{% url 'projects' %}">
+			<i class="fa fa-code-fork" aria-hidden="true"></i>
 			Projects
 		</a></li>
 		<li><a href="{% url 'contact' %}">
+			<i class="fa fa-envelope" aria-hidden="true"></i>
 			Contact
 		</a></li>
+		<li>
+			<a href="http://www.linkedin.com/in/chrisknoll3" target="_blank">
+				<i class="fa fa-linkedin-square" aria-hidden="true"></i>
+			</a>
+			<a href="http://github.com/chris-knoll" target="_blank">
+				<i class="fa fa-github-square" aria-hidden="true"></i>
+			</a>
+		</li>
 	</ul>
 </nav>
